# chip8cpp

./: .clang-format  .clang-format-ignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
cmake/: utils.cmake
src/: CMakeLists.txt  main.cpp
src/chip8/: CMakeLists.txt  emulator.cpp  emulator.hpp  window.cpp  window.hpp
src/display/: CMakeLists.txt  screen.cpp  screen.hpp  sdl_context.cpp  sdl_context.h
